--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <ul>
           <li><a href="index.html" class="active">Home</a></li>
 
-          <li><a href="About.html">About</a></li>
+          <li><a href="about.html">About</a></li>
           <li><a href="index.html#services">Services</a></li>
           <li><a href="index.html#portfolio">Gallary / Photos </a></li>
           <li><a href="contact.html">Contact</a></li>
