--- a/booking.html
+++ b/booking.html
@@ -243,6 +243,7 @@
 
   <!-- Template Main JS File -->
   <script src="assets/js/main.js"></script>
+  <script src="assets/js/booking.js"></script>
 
 </body>
 
